Added more marker in pytest.ini

--- a/Requests/pytest.ini
+++ b/Requests/pytest.ini
@@ -5,3 +5,4 @@ markers =
     putRequest: mark a test as put request
     deleteReuest: mark a test as delete request
     runpostandput: mark a test as run combined with post and put
+    regression: mark a test as regression testcase
